--- a/Vibescape/package.json
+++ b/Vibescape/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "mongoose": "^8.13.1",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "url": "^0.11.4"
